--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "file-saver": "^2.0.5",
         "highlight.js": "^10.4.0",
         "highlightjs-line-numbers.js": "^2.8.0",
+        "html2canvas": "^1.3.2",
         "jspdf": "^2.3.1",
         "jspdf-autotable": "^3.5.14",
         "moment": "^2.27.0",
